--- a/package.json
+++ b/package.json
@@ -10,30 +10,31 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.21",
     "axios": "^1.10.0",
     "daisyui": "^5.0.43",
     "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
-    "postcss": "^8.5.5",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
-    "react-toastify": "^11.0.5",
-    "tailwindcss": "^4.1.10"
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/postcss": "^4.1.10",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.5",
+    "tailwindcss": "^4.1.10",
     "vite": "^6.3.5"
   }
 }
