--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "react-hook-form": "^7.58.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/postcss": "^4.1.10",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -37,6 +39,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.5",
     "tailwindcss": "^4.1.10",
+    "tailwindcss-animated": "^2.0.0",
     "vite": "^6.3.5"
   }
 }
