--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.58.0",
     "react-icons": "^5.5.0",
